--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,6 +16,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Fix line endings on gradlew
+        run: |
+          # Instala los paquetes necesarios si no están
+          sudo apt-get update -qq && sudo apt-get install dos2unix -qq
+          # Convierte de CRLF a LF
+          dos2unix gradlew
+
+      - name: Fix line endings on gradlew
+        run: sed -i 's/\r$//' gradlew
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
