--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,14 +17,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Fix line endings on gradlew
-        run: |
-          # Instala los paquetes necesarios si no están
-          sudo apt-get update -qq && sudo apt-get install dos2unix -qq
-          # Convierte de CRLF a LF
-          dos2unix gradlew
-
-      - name: Fix line endings on gradlew
         run: sed -i 's/\r$//' gradlew
+
+      - name: Make gradlew executable
+        run: chmod +x gradlew
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -42,6 +38,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          api-level: 31
+          build-tools: "31.0.0"
+          ndk: "21.4.7075529"
+
+      - name: Start Android emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 31
+          target: default
+          arch: x86_64
+          emulator-options: "-no-window"
+
       - name: Build with Gradle
         run: ./gradlew assembleDebug
 
@@ -49,9 +60,7 @@ jobs:
         run: ./gradlew testDebugUnitTest
 
       - name: Run instrumentation tests
-        run: |
-          adb devices # ensure emulator
-          ./gradlew connectedDebugAndroidTest
+        run: ./gradlew connectedDebugAndroidTest
 
   publish-artifact:
     needs: build-and-test
@@ -67,4 +76,4 @@ jobs:
           name: debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
 
-  # Puedes agregar un job de despliegue a Google Play aquí cuando estés listo.
+  # Agrega jobs de despliegue a Google Play o Firebase si los necesitas.
