--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -43,6 +43,7 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 firebase-crashlytics = {module = "com.google.firebase:firebase-crashlytics" }
 firebase-auth = {module = "com.google.firebase:firebase-auth-ktx" }
 firebase-firestore = {module= "com.google.firebase:firebase-firestore"}
+firebase-storage = {module= "com.google.firebase:firebase-storage"}
 
 coil = {module = "io.coil-kt:coil-compose", version.ref = "coil"}
 
